started to make the conversion work