@@ -1,2 +1,5 @@
 ## Yet Another wplace image converter (but in java) 
 /!\ it's still a work in progress
+
+/!\ not working :
+exe command : jpackage --input .\out\artifacts\shadowEater_jar\ --main-jar shadowEater.jar --main-class com.shadowEater.ShadowApp --name test_app --type exe --app-version 0.0.0 --add-modules ALL-MODULE-PATH  --win-console
